Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Blog by kody-w</title>
+    <title>@kody-w by kody-w</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Blog</h1>
-        <p>Kody&#39;s Blog</p>
+        <h1>@kody-w</h1>
+        <p>Kody Wildfeuer&#39;s Blog</p>
 
         <p class="view"><a href="https://github.com/kody-w/blog">View the Project on GitHub <small>kody-w/blog</small></a></p>
 
